# lptools_build

./: .gitignore  CMakeLists.txt  README.md  apply_patch.sh  build.sh  sync.sh
cmake/: absl.cmake  aprotoc.cmake  boringssl.cmake  fmtlib.cmake  googletest.cmake  include.cmake  libbase.cmake  libcrypto_utils.cmake  libcutils.cmake  libext2_uuid.cmake  libext4_utils.cmake  libjsoncpp.cmake  libjsonpbparse.cmake  liblog.cmake  liblp.cmake  libprocessgroup.cmake  libsparse.cmake  partition_tools.cmake  protobuf.cmake  zlib.cmake
patches/logging/: 0001-Revert-Make-timespec-const-for-new-timestamp-functio.patch  0002-Revert-Add-a-function-to-log-with-a-timestamp.patch
